# merlin

app/: build.gradle
app/src/androidTest/java/com/gotokeep/keep/su/merlin/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gotokeep/keep/su/merlin/demo/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/gotokeep/keep/su/merlin/demo/: ExampleUnitTest.kt
lib/: CMakeLists.txt  build.gradle
lib/libs/armeabi-v7a/pkgconfig/: libavformat.pc  libavutil.pc
lib/src/androidTest/java/com/gotokeep/keep/su/merlin/: ExampleInstrumentedTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: android_log.c  android_log.h  merlin-lib.cpp
lib/src/main/cpp/merlin/: Asset.cpp  Asset.h  Context.cpp  Context.h  EglCore.cpp  EglCore.h  Track.cpp  Track.h  merlin.h
lib/src/main/res/values/: strings.xml
lib/src/test/java/com/gotokeep/keep/su/merlin/: ExampleUnitTest.java
libs/include/libavutil/: common.h  ffversion.h
libs/lib/: libx264.so.152
libs/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavresample.pc  libpostproc.pc  libswresample.pc  libswscale.pc  x264.pc
